...

    <!--______UNTRANSLATEABLE STRINGS______-->
        <!--ARRAYS-->
            <string-array name="architectures" tools:ignore="MissingTranslation">
                <item>ARM</item>
                <item>ARM64</item>
                <item>x86</item>
                <item>x86_64</item>
            </string-array>
            <string-array name="android_versions" tools:ignore="MissingTranslation">
                <item>8.1</item>
                <item>8.0</item>
                <item>7.1</item>
...
                <item>6.0</item>
                <item>5.1</item>
                <item>5.0</item>
                <item>4.4</item>
            </string-array>
            <string-array name="opengapps_variant" tools:ignore="MissingTranslation">
                <item>aroma</item>
                <item>super</item>
                <item>stock</item>
                <item>full</item>
                <item>mini</item>
                <item>micro</item>
                <item>nano</item>
...
