...
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:ignore="Overdraw">


    <Button
        android:id="@+id/permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_grant_permission"
...
